--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
           reprehenderit quisquam.
         </p>
         <div class="btns">
-          <a class="btn btn-success p-2 text-center btn-md btn-sm" href="#">Register</a>
+          <a class="btn btn-success p-2 text-center btn-md btn-sm" href="/sign-up">Register</a>
           <a class="btn btn-outline-success p-2 text-center btn-md btn-sm" href="#">Login</a>
         </div>
       </div>
@@ -76,21 +76,6 @@
   </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
-  <script>
-    function myfunction() {
-      let wid = window.innerWidth;
-      let su = document.getElementById('sign-up-redirect');
-      let lg = document.getElementById('login-redirect');
-      console.log(wid);
-      if (wid < 500) {
-        su.href = '#sign-up';
-        lg.href = '#login';
-      } else {
-        su.href = '#';
-        lg.href = '#';
-      }
-    }
   </script>
 
   </body>
