--- a/views/developers.ejs
+++ b/views/developers.ejs
@@ -6,14 +6,25 @@
         <% for(let i = 0; i < developers.length; i++) { %>
         <ul class="list-group card my-3">
             <li class="list-group-item d-flex">
-                <img src='<%= developers[i].img %>' style="width: 100px; height:100px; border-radius: 50%">
-                <div>
-                    <p class="lead px-3" style="line-height: 100px"><%= developers[i].name %></p>
+                <img src='<%= developers[i].img %>'
+                    style="width: 100px; height:100px; border-radius: 50%;border:3px solid #28a745">
+                <div style="width: 100%;">
+                    <p class="lead px-3" style="line-height: 100px;">
+                        <%= developers[i].name %><span class="mx-1"><i class="fas fa-circle"
+                                style="font-size: 6px;"></i></span>
+                    </p>
+                    <div
+                        style="height: 3px;width:100%;background-image: linear-gradient(to right,#28a745,#fff);margin-top: -20px;">
+                    </div>
                 </div>
             </li>
             <li class="list-group-item"><%= developers[i].desc %></li>
             <li class="list-group-item">
-                <div class="btn btn-dark">Learn More</div>
+                <a class="btn btn-dark" style="cursor: pointer;color:white">Learn More</a>
+                <ul class="list-inline float-right">
+                    <li class="list-inline-item"><i class="fab fa-facebook-f" style="color:black"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-instagram" style="color: black"></i></li>
+                </ul>
             </li>
         </ul>
         <% } %>
