--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,73 @@
-  <% include partials/header.ejs %>
+
+    
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Document</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+
+  <style>
+    li {
+      background-color: transparent !important;
+      border: none !important;
+    }
+  </style>
+  <link rel="stylesheet" href="css/index.css" />
+</head>
+
+<body onresize="myfunction()">
+  <header>
+    <div class="row bg-success" style="border-bottom:1px solid rgba(255, 255, 255, 0.3);">
+      <div class="container">
+        <ul class="list-group list-group-horizontal">
+          <li class="list-group-item">
+            <a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a>
+          </li>
+          <li class="list-group-item">
+            <a href="#" title="instagram"><i class="fab fa-instagram"></i></a>
+          </li>
+          <li class="list-group-item">
+            <a href="#" title="linkedIn"><i class="fab fa-linkedin-in"></i></a>
+          </li>
+          <li class="list-group-item">
+            <a href="#" title="google-plus"><i class="fab fa-google-plus-g"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="row bg-success">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg nav-light bg-success">
+          <a class="navbar-brand" href="/">Sarokaar</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto navbar-right">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Developers<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href='#sign-up' id="sign-up-redirect">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#login" id="login-redirect">Login</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </header>
 
   <section class="banner">
     <!-- <img src="images/mtn.jpg" /> -->
@@ -12,7 +81,7 @@
           reprehenderit quisquam.
         </p>
         <div class="btns">
-          <a class="btn btn-success p-2 text-center btn-md btn-sm" href="/sign-up">Register</a>
+          <a class="btn btn-success p-2 text-center btn-md btn-sm" href="#">Register</a>
           <a class="btn btn-outline-success p-2 text-center btn-md btn-sm" href="#">Login</a>
         </div>
       </div>
@@ -66,8 +135,14 @@
     </div>
   </section>
 
-  <% include partials/footer.ejs %>
-
+  <footer>
+    <div class="row bg-success">
+      <div class="container text-center">
+        <p class="lead m-0">2019 Sarokaar</p>
+        <p class="lead m-0">All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
@@ -77,7 +152,23 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
+  <script>
+    function myfunction() {
+      let wid = window.innerWidth;
+      let su = document.getElementById('sign-up-redirect');
+      let lg = document.getElementById('login-redirect');
+      console.log(wid);
+      if (wid < 500) {
+        su.href = '#sign-up';
+        lg.href = '#login';
+      } else {
+        su.href = '#';
+        lg.href = '#';
+      }
+    }
+  </script>
 
-  </body>
+</body>
 
-  </html>
+</html>
+
