--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,6 +47,7 @@
           <input type="text" class="form-control" placeholder="first Name" />
           <input type="text" class="form-control" placeholder="last Name" />
           <input type="email" class="form-control" placeholder="email" />
+          <input type="text" class="form-control" placeholder="address" />
           <input type="text" class="form-control" placeholder="phone-number" />
           <input type="password" class="form-control" placeholder="password" />
           <input type="password" class="form-control" placeholder="confirm Password" />
