--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -47,6 +47,9 @@
 
 <body>
     <div class="wrapper">
+        <% if(typeof msg !== 'undefined') { %>
+        <div class="alert alert-danger"><%= msg %></div>
+        <% } %>
         <h1>Sar<span class="text-success">ok</span>aar</h1>
         <form action="#" method="POST">
             <div class="form-group">
