--- a/views/developers.ejs
+++ b/views/developers.ejs
@@ -2,9 +2,9 @@
 
 <main>
     <div class="container">
-        <h1 class="lead display-3" style="color:aliceblue;text-align:center">Our <%= title %></h1>
+        <h1 class="lead display-3" style="text-align:center">Our <%= title %></h1>
         <% for(let i = 0; i < developers.length; i++) { %>
-        <ul class="list-group card my-3">
+        <ul class="list-group card my-3" style="color: black;">
             <li class="list-group-item d-flex">
                 <img src='<%= developers[i].img %>'
                     style="width: 100px; height:100px; border-radius: 50%;border:3px solid #28a745">
