--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,6 +14,10 @@
       color: black;
       background-color: whitesmoke;
     }
+
+    .col-md-2 .list-group a {
+      color: black !important;
+    }
   </style>
 </head>
 
@@ -22,8 +26,9 @@
     <div class="col-md-2" style="box-shadow: 0 0 10px rgba(0,0,0,0.2)">
       <h1 class="text-center">Sar<span class="text-success">ok</span>aar</h1>
       <ul class="list-group">
-        <li class="list-group-item"><i class="fas fa-tachometer-alt"></i>Dashboard</li>
+        <li class="list-group-item"><i class="fas fa-tachometer-alt"></i><a href="/admin">Dashboard</a></li>
         <li class="list-group-item"><i class="fas fa-user-tie"></i>Profile</li>
+        <li class="list-group-item"><i class="fas fa-users"></i>Users</li>
       </ul>
     </div>
     <div class="col-md-10">
