--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,13 +44,13 @@
       <div class="container">
         <h3>Become a part of us!</h3>
         <form action="#">
-          <input type="text" class="form-control" placeholder="first Name" />
-          <input type="text" class="form-control" placeholder="last Name" />
-          <input type="email" class="form-control" placeholder="email" />
-          <input type="text" class="form-control" placeholder="address" />
-          <input type="text" class="form-control" placeholder="phone-number" />
-          <input type="password" class="form-control" placeholder="password" />
-          <input type="password" class="form-control" placeholder="confirm Password" />
+          <input type="text" name="fname" class="form-control" placeholder="firstName" />
+          <input type="text" name="lname" class="form-control" placeholder="last Name" />
+          <input type="email" name="email" class="form-control" placeholder="email" />
+          <input type="text" name="addr" class="form-control" placeholder="address" />
+          <input type="text" name="mobile" class="form-control" placeholder="mobile" />
+          <input type="password" name="password" class="form-control" placeholder="password" />
+          <input type="password" name="cpassword" class="form-control" placeholder="confirm Password" />
           <input type="submit" value="register" class="btn btn-block btn-success" />
         </form>
       </div>
