--- a/views/complainform.ejs
+++ b/views/complainform.ejs
@@ -4,6 +4,7 @@
 <head>
     <title>file uploader</title>
     <link rel="stylesheet" href="fonts/css/all.min.css" />
+    <link rel="shortcut icon" href="/images/slogo-2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
