--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,6 +8,7 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="fonts/css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="shortcut icon" href="/images/slogo-2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/index.css" />
     <style>
         body {
