--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -23,3 +23,9 @@
             </ul>
         </div>
 </footer>
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.css"></script>
+<script src="js/bootstrap.min.js"></script>
+</body>
+
+</html>
