--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= title %></title>
+    <link rel="shortcut icon" href="/images/slogo-2.png" type="image/x-icon">
     <link rel="stylesheet" href="fonts/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
@@ -31,17 +32,27 @@
                     <ul class="navbar-nav mr-auto navbar-right">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="/developers">Developers<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="/about">About us</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/developers">Developers</a>
+                        </li>
+                        <li class="nav-item">
+                            <% if('document.width' < 425+'px') { %>
                             <a class="nav-link" href="#sign-up" id="sign-up-redirect">Register</a>
+                            <% }else { %>
+                            <a class="nav-link" href="/user/register" id="login-redirect">Register</a>
+                            <% } %>
                         </li>
                         <li class="nav-item">
+                            <% if('document.width' < 425+'px') { %>
                             <a class="nav-link" href="#login" id="login-redirect">Login</a>
+                            <% }else { %>
+                            <a class="nav-link" href="/user/login" id="login-redirect">Login</a>
+                            <% } %>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
     </div>
-    <div class="clear"></div>
