--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
-<footer>
+<footer style="margin-top:80px">
     <div class="row bg-success">
         <div class="container text-center">
-            <p class="lead m-0">2019 Sarokaar</p>
-            <p class="lead m-0">All rights reserved.</p>
+            <p class="lead m-0">&copy;-Sarokaar 2019-</p>
+            <small>all rights reserved.</small>
         </div>
     </div>
     <div class="row bg-success" style="border-bottom:1px solid rgba(255, 255, 255, 0.3);">
@@ -23,9 +23,6 @@
             </ul>
         </div>
 </footer>
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.min.css"></script>
-<script src="js/bootstrap.min.js"></script>
-</body>
-
-</html>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/popper.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
