--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer style="margin-top:80px">
+<footer>
     <div class="row bg-success">
         <div class="container text-center">
             <p class="lead m-0">&copy;-Sarokaar 2019-</p>
@@ -7,18 +7,18 @@
     </div>
     <div class="row bg-success" style="border-bottom:1px solid rgba(255, 255, 255, 0.3);">
         <div class="container">
-            <ul class="list-group list-group-horizontal float-right">
-                <li class="list-group-item">
-                    <a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a>
+            <ul class="list-inline float-right">
+                <li class="d-inline px-2">
+                    <a href="#" title="facebook" class="text-light"><i class="fab fa-facebook-f"></i></a>
                 </li>
-                <li class="list-group-item">
-                    <a href="#" title="instagram"><i class="fab fa-instagram"></i></a>
+                <li class="d-inline px-2">
+                    <a href="#" title="instagram" class="text-light"><i class="fab fa-instagram"></i></a>
                 </li>
-                <li class="list-group-item">
-                    <a href="#" title="linkedIn"><i class="fab fa-linkedin-in"></i></a>
+                <li class="d-inline px-2">
+                    <a href="#" title="linkedIn" class="text-light"><i class="fab fa-linkedin-in"></i></a>
                 </li>
-                <li class="list-group-item">
-                    <a href="#" title="google-plus"><i class="fab fa-google-plus-g"></i></a>
+                <li class="d-inline px-2">
+                    <a href="#" title="google-plus" class="text-light"><i class="fab fa-google-plus-g"></i></a>
                 </li>
             </ul>
         </div>
