--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,3 +1,44 @@
-<div class="container">
-    <h1>hello world!!</h1>
+<div class="row">
+    <div class="col-md-8 m-auto text-center">
+        <img src="/images/slogo-2.png" style="height=20px;width:35px;">
+        <h1>Sar<span class="text-success">ok</span>aar</h1>
+        <p class="lead">We do listen to your concerns.</p>
+    </div>
+</div>
+
+<% if(typeof errors != 'undefined') { %>
+    <% errors.forEach(error => { %>
+        <div class="row">
+            <div class="col-md-8 m-auto text-center">
+                <div class="alert alert-danger"><%= error.msg %></div>
+            </div>
+        </div>
+    <% }); %>
+<% } %>
+
+
+<div class="row mb-5">
+    <div class="col-md-8 m-auto text-center">
+        <div class="card card-body">
+            <form action="/user/login" method="POST">
+                <div class="form-group bx">
+                    <i class="fab fa-google"></i>
+                    <input type="text" 
+                    name="uname" 
+                    placeholder="username" 
+                    value="<%= typeof uname != 'undefined' ? uname : '' %>"
+                    class="transparent"> 
+                </div>
+                <div class="form-group bx">
+                    <i class="fab fa-google"></i>
+                    <input type="password" 
+                    name="password" 
+                    placeholder="password" 
+                    value="<%= typeof password != 'undefined' ? password : '' %>"
+                    class="transparent">
+                </div>
+                <input type="submit" value="login" class="btn btn-primary">
+            </form>
+        </div>
+    </div>
 </div>
