--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,52 +1,81 @@
-<div class="container f-flex flex-column text-center">
-    <h1><img src="/images/slogo-2.png" style="height=20px;width:35px;">Sa<span class="text-success">ok</span>aar
-    </h1>
-    <p class="lead">We do listen to your concerns.</p>
-</div>
-<div class="container d-flex justify-content-center align-items-center">
-    <div class="form-container-user-register">
-        <form action="/user/register" method="POST" class="d-flex justify-content-center align-items-center flex-column">
-            <div class="d-flex justify-content-center align-items-center flex-column">
-                <small style="line-height:50px;text-align:center;color:#bdbcc1">Sign up with</small>
-                <div class="buttons">
-                    <button class="bx mb-2" style="border:none;outline:none"><i class="fab fa-google"></i><small class="text-info font-weight-bold">Google</small></button>
-                    <button class="bx" style="border:none;outline:none"><i class="fab fa-facebook"></i><small class="text-info font-weight-bold">Facebook</small></button>
-                </div>
-            </div>
-            <hr>
-            <small style="line-height:50px;text-align:bottom;color:#bdbcc1">or sign up with credentials</small>
-            <div class="form-group bx">
-                <i class="fab fa-google"></i>
-                <input type="text" name="fname" placeholder="first name" class="transparent" autocomplete="disabled">
-            </div>
-            <div class="form-group bx">
-                <i class="fab fa-google"></i>
-                <input type="text" name="lname" placeholder="last name" class="transparent" autocomplete="disabled">
-            </div>
-            <div class="form-group bx">
-                <i class="fab fa-google"></i>
-                <input type="text" name="email" placeholder="email" class="transparent" autocomplete="disabled">
-            </div>
-            <div class="form-group bx">
-                <i class="fab fa-google"></i>
-                <input type="text" name="mobile" placeholder="mobile" class="transparent" autocomplete="disabled">
-            </div>
-            <div class="form-group bx">
-                <i class="fab fa-google"></i>
-                <input type="password" name="password" placeholder="password" class="transparent">
-            </div>
-            <div class="form-group bx">
-                <i class="fab fa-google"></i>
-                <input type="password" name="cpassword" placeholder="confirm-password" class="transparent">
-            </div>
-            <div class="form-group">
-                <input type="checkbox" name="" value=""><span style="color:#bdbcc1;">i agree with the</span><a href="#"><span class="text-info"> Privacy Policy</a></span>
-            </div>
-            <input type="submit" value="submit" class="btn btn-primary">
-        </form>
+<div class="row">
+    <div class="col-md-8 m-auto text-center">
+        <img src="/images/slogo-2.png" style="height=20px;width:35px;">
+        <h1>Sar<span class="text-success">ok</span>aar</h1>
+        <p class="lead">We do listen to your concerns.</p>
     </div>
 </div>
 
-<% if(locals.msg != null) { %>
-  <div class="alert alert-success error-msg">hello <%= fname + "! " %><%= msg %></div>
+<% if(typeof errors != 'undefined') { %>
+    <% errors.forEach(error => { %>
+        <div class="row">
+            <div class="col-md-8 m-auto text-center">
+                <div class="alert alert-danger"><%= error.msg %></div>
+            </div>
+        </div>
+    <% }); %>
 <% } %>
+
+
+<div class="row mb-4">
+    <div class="col-md-8 m-auto text-center">
+        <div class="card card-body">
+            <small class="text-dark mb-2">Sign up with</small>
+            <div>
+                <a href="#" class="btn btn-light">
+                    <i class="fab fa-google"></i>
+                    Google
+                </a>
+                <a href="#" class="btn btn-light">
+                    <i class="fab fa-facebook"></i>
+                    Facebook
+                </a>
+            </div>
+            <hr>
+            <small class="text-dark mb-2">or sign up with credentials</small>
+            <form action="/user/register" method="POST">
+                <div class="form-group bx">
+                    <i class="fab fa-google"></i>
+                    <input type="text" 
+                    name="uname" 
+                    placeholder="username" 
+                    value="<%= typeof uname != 'undefined' ? uname : '' %>"
+                    class="transparent"> 
+                </div>
+                <div class="form-group bx">
+                    <i class="fab fa-google"></i>
+                    <input type="text" 
+                    name="email" 
+                    placeholder="email" 
+                    value="<%= typeof email != 'undefined' ? email : '' %>"
+                    class="transparent">
+                </div>
+                <div class="form-group bx">
+                    <i class="fab fa-google"></i>
+                    <input type="text" 
+                    name="mobile" 
+                    placeholder="mobile" 
+                    value="<%= typeof mobile != 'undefined' ? mobile : '' %>"
+                    class="transparent">
+                </div>
+                <div class="form-group bx">
+                    <i class="fab fa-google"></i>
+                    <input type="password" 
+                    name="password" 
+                    placeholder="password" 
+                    value="<%= typeof password != 'undefined' ? password : '' %>"
+                    class="transparent">
+                </div>
+                <div class="form-group bx">
+                    <i class="fab fa-google"></i>
+                    <input type="password" 
+                    name="cpassword" 
+                    placeholder="confirm-password"
+                    value="<%= typeof cpassword != 'undefined' ? password : '' %>" 
+                    class="transparent">
+                </div>
+                <input type="submit" value="register" class="btn btn-primary">
+            </form>
+        </div>
+    </div>
+</div>
