--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -24,9 +24,9 @@
                 <div class="form-group bx">
                     <i class="fab fa-google"></i>
                     <input type="text" 
-                    name="uname" 
-                    placeholder="username" 
-                    value="<%= typeof uname != 'undefined' ? uname : '' %>"
+                    name="email" 
+                    placeholder="email" 
+                    value="<%= typeof email != 'undefined' ? email : '' %>"
                     class="transparent"> 
                 </div>
                 <div class="form-group bx">
