--- a/views/partials/user-header.ejs
+++ b/views/partials/user-header.ejs
@@ -13,7 +13,7 @@
           <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><%= user[0].uname %></a>
+          <a class="nav-link" href="#"><%= user.uname %></a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
