--- a/views/partials/user-sidebar.ejs
+++ b/views/partials/user-sidebar.ejs
@@ -2,8 +2,9 @@
   <li><a href="#" class="text-dark btn btn-block">complain</a></li>
   <li><a href="#" class="text-dark btn btn-block">profile</a></li>
   <li><a href="#" class="text-dark btn btn-block">settings</a></li>
-  <li><a href="/user/login" class="text-dark btn btn-block">logout</a></li>
-  <li><a href="#" class="text-dark btn btn-block">complain</a></li>
-  <li><a href="#" class="text-dark btn btn-block">complain</a></li>
-  <li><a href="#" class="text-dark btn btn-block">complain</a></li>
+  <li>
+    <form action="/user/logout" method="GET">
+      <input type="submit" value="logout" class="text-dark btn btn-block">
+    </form>
+  </li>
 </ul>
