--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -6,7 +6,7 @@
     <form action="/admin" method="POST">
         <div class="form-group">
             <i class="fas fa-user-tie"></i>
-            <input type="text" name='username' class="" placeholder="username" autocomplete="off">
+            <input type="text" name='email' class="" placeholder="email" autocomplete="off">
         </div>
         <div class="form-group">
             <i class="fas fa-lock"></i>
