--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -6,23 +6,14 @@
     </div>
 </div>
 
-<% if(typeof errors != 'undefined') { %>
-    <% errors.forEach(error => { %>
-        <div class="row">
-            <div class="col-md-8 m-auto text-center">
-                <div class="alert alert-danger"><%= error.msg %></div>
-            </div>
-        </div>
-    <% }); %>
-<% } %>
-
+<%- include('../partials/messages.ejs') %>
 
 <div class="row mb-5">
     <div class="col-md-8 m-auto text-center">
         <div class="card card-body">
             <form action="/user/login" method="POST">
                 <div class="form-group bx">
-                    <i class="fab fa-google"></i>
+                    <i class="fas fa-user-circle"></i>
                     <input type="text" 
                     name="email" 
                     placeholder="email" 
@@ -30,7 +21,7 @@
                     class="transparent"> 
                 </div>
                 <div class="form-group bx">
-                    <i class="fab fa-google"></i>
+                    <i class="fas fa-key"></i>
                     <input type="password" 
                     name="password" 
                     placeholder="password" 
