--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -6,16 +6,7 @@
     </div>
 </div>
 
-<% if(typeof errors != 'undefined') { %>
-    <% errors.forEach(error => { %>
-        <div class="row">
-            <div class="col-md-8 m-auto text-center">
-                <div class="alert alert-danger"><%= error.msg %></div>
-            </div>
-        </div>
-    <% }); %>
-<% } %>
-
+<%- include('../partials/messages.ejs') %>
 
 <div class="row mb-4">
     <div class="col-md-8 m-auto text-center">
@@ -35,7 +26,7 @@
             <small class="text-dark mb-2">or sign up with credentials</small>
             <form action="/user/register" method="POST">
                 <div class="form-group bx">
-                    <i class="fab fa-google"></i>
+                    <i class="fas fa-user-circle"></i>
                     <input type="text" 
                     name="uname" 
                     placeholder="username" 
@@ -43,7 +34,7 @@
                     class="transparent"> 
                 </div>
                 <div class="form-group bx">
-                    <i class="fab fa-google"></i>
+                    <i class="far fa-envelope"></i>
                     <input type="text" 
                     name="email" 
                     placeholder="email" 
@@ -51,7 +42,7 @@
                     class="transparent">
                 </div>
                 <div class="form-group bx">
-                    <i class="fab fa-google"></i>
+                    <i class="fas fa-mobile-alt"></i>
                     <input type="text" 
                     name="mobile" 
                     placeholder="mobile" 
@@ -59,7 +50,7 @@
                     class="transparent">
                 </div>
                 <div class="form-group bx">
-                    <i class="fab fa-google"></i>
+                    <i class="fas fa-key"></i>
                     <input type="password" 
                     name="password" 
                     placeholder="password" 
@@ -67,7 +58,7 @@
                     class="transparent">
                 </div>
                 <div class="form-group bx">
-                    <i class="fab fa-google"></i>
+                    <i class="fas fa-key"></i>
                     <input type="password" 
                     name="cpassword" 
                     placeholder="confirm-password"
